030-software/fluxcd/apps/boop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boop
  annotations:
    secret.reloader.stakater.com/reload: boop
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: boop
  template:
    metadata:
      labels:
        app: boop
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: boop
          image: ghcr.io/shokohsc/boop:v1.3.0
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 100m
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        # - name: apns
        #   secret:
        #     secretName: boop
        #     items:
        #       - key: apns.p8
        #         path: apns.p8
