030-software/fluxcd/apps/boop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boop
  labels:
    app: boop
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: boop
